--- a/docs/operate/server-installation.mdx
+++ b/docs/operate/server-installation.mdx
@@ -1,8 +1,9 @@
 ---
 id: server-installation
-title: Resonate Server installation
-sidebar_label: Server installation
+title: Resonate Server Local installation
+sidebar_label: Local installation
 description: Learn how to install and run the Resonate Server on your machine.
+sidebar_position: 1
 last_update:
   date: "10-28-2024"
 tags:
