how it works page

--- a/docs/evaluate/how-it-works.mdx
+++ b/docs/evaluate/how-it-works.mdx
@@ -1,16 +1,20 @@
 ---
-id: system-architecture
-title: Resonate system architecture
-sidebar_label: System architecture
+id: how-it-works
+title: How Resonate works
+sidebar_label: How it works
 sidebar_position: 7
 last_update:
-  date: "10-02-2024"
+  date: "02-28-2025"
 tags:
   - why-resonate
   - architecture
+  - how-it-works
 ---
 
 Resonate facilitates the development and operation of distributed applications.
+
+## System architecture
+
 The following diagram illustrates the system architecture of Resonate:
 
 ![Resonate system architecture](/img/resonate-architecture.svg)
